--- a/code/10_descriptives.Rmd
+++ b/code/10_descriptives.Rmd
@@ -27,12 +27,12 @@ fyc <- readRDS(here::here("data_processed/fyc.RDS")) |>
 	# 3 means uninsured, and it matched UNINSYY
 	mutate(INSCOV = if_else(INSCOVYY ==3, 0, 1)) |> 
 	# race: 2012 only year they didn't combine 4, 5 for RACEV1X. Combine
-	mutate(
-		RACE = case_when(
-			RACEV1X %in% c(4,5) ~ 4,
-			RACEX %in% c(4,5) ~ 4,
-			TRUE ~ coalesce(RACEX, RACEV1X)
-		)) |> 
+	# mutate(
+	# 	RACE = case_when(
+	# 		RACEV1X %in% c(4,5) ~ 4,
+	# 		RACEX %in% c(4,5) ~ 4,
+	# 		TRUE ~ coalesce(RACEX, RACEV1X)
+	# 	)) |> 
 	# don't need weights, not going to do weighted sampling
 	select(
 		, year:DUPERSID
@@ -49,7 +49,7 @@ fyc <- readRDS(here::here("data_processed/fyc.RDS")) |>
 		, PCS42:MCS42
 		, SEX
 		, HISPANX
-		, RACE
+		# , RACE
 		# , EDUCYR, HIDEG, EDUYRDG, EDRECODE
 		, POVCATYY
 		, fct_POVCATYY
@@ -89,7 +89,19 @@ Without truncating, shows nothing really:
 ```{r hist_asis}
 ggplot(
 	fyc, aes(x=TOTEXPYY))+
-	geom_histogram(bins=100)
+	geom_histogram(bins=100)+
+	geom_histogram(
+		aes(y = after_stat(count)/sum(after_stat(count))), 
+		fill="steelblue", bins=40)+
+	theme(
+		panel.background = element_blank(), 
+		panel.border = element_rect(color="black", fill=NA),
+		axis.ticks=element_line(color="black")
+	)+
+	scale_x_continuous(expand=c(0.02,0))+
+	scale_y_continuous(expand=c(0,0)) +
+	ylab("Fraction")+
+	xlab("Total health care expenditures (dollars)")
 ```
 
 ```{r hist_le50k}
