also see try46 for Felix's first start, but it had wrong coefficients.

--- a/code/Try45_v4.Rmd
+++ b/code/Try45_v4.Rmd
@@ -67,12 +67,12 @@ simulate_panel_data <- function(
   ind_tx_i     <- rbinom(n, 1, p_treated)
   ind_female_i <- rbinom(n, 1, 0.5)
   HISPANX_i    <- rbinom(n, 1, 0.2)
-  INSCOV_i     <- sample(1:3, n, replace = TRUE)
+  # INSCOV_i     <- sample(1:3, n, replace = TRUE)
 
   ind_tx     <- rep(ind_tx_i, each = T)
   ind_female <- rep(ind_female_i, each = T)
   HISPANX    <- rep(HISPANX_i, each = T)
-  INSCOV     <- factor(rep(INSCOV_i, each = T))
+  # INSCOV     <- factor(rep(INSCOV_i, each = T))
 
   # PCS42 with correlation
   Sigma <- matrix(c(1, rho, rho, 1), 2, 2)
