--- a/code/Try46_run.Rmd
+++ b/code/Try46_run.Rmd
@@ -66,9 +66,24 @@ extreme_range <- function(mag_level) {
 
 
 
-# ------------------------------------------------------
-# 1) DGP: two-part Gamma with extremes (UPDATED to use COEF)
-# ------------------------------------------------------
+------------------------------------------------------
+1) DGP: two-part Gamma with extremes (UPDATED to use COEF)
+------------------------------------------------------
+
+ - Creates a 2-period panel (pre/post) for n individuals  
+ - time indicator: ind_post (0 for pre, 1 for post)  
+ - Baseline Covariates (time-invariant, assigned at individual level), all replicated across both time periods using `rep(., each=T)`  
+    - Treatment assignment, 50% probability  
+    - Female: 50% probability  
+    - Hispanic: 20% probability  
+  - Health Status (PCS42) with temporal correlation:  
+    - Generates correlated Physical Component Scores across the 2 periods  
+    - Uses bivariate normal wth correlation `rho=0.5`  
+    - Mean 50, then standardizes to zPCS (mean 0, SD 10)  
+    - To capture realistic correlation in health status over time  
+  - Random effects generated, but not actually used in linear predictors  
+  - TPM part 2: gamma distribution with fixed shape = 3, scale adjusted for each observation (gamma has 2 parameterizations: Shape-Rate [`shape` and `rate`] and Shape-Scale [`shape` and `scale` > what this code is using...]). Their relationship is `mean=shape*scale`. In code, for each observation, the shape parameter stays constant (at 3) but scale parameter varies based on that observation's covariates to ensure `E[TOTEXPYY | covariates] = mu = exp(lp_cont)`. All obs will have the same shape (to control distributional form / variance) but different scales (controls the mean). This is how to implement a GLM-style Gamma regression where the mean depends on covariates but the coefficient of variation stays constant.  
+  
 
 ```{r}
 simulate_panel_data <- function(
@@ -85,12 +100,12 @@ simulate_panel_data <- function(
   ind_tx_i     <- rbinom(n, 1, p_treated)
   ind_female_i <- rbinom(n, 1, 0.5)
   HISPANX_i    <- rbinom(n, 1, 0.2)
-  INSCOV_i     <- sample(1:3, n, replace = TRUE)
+  #INSCOV_i     <- sample(1:3, n, replace = TRUE)
 
   ind_tx     <- rep(ind_tx_i, each = T)
   ind_female <- rep(ind_female_i, each = T)
   HISPANX    <- rep(HISPANX_i, each = T)
-  INSCOV     <- factor(rep(INSCOV_i, each = T))
+  #INSCOV     <- factor(rep(INSCOV_i, each = T))
 
   # PCS42 with correlation (keep your approach)
   Sigma <- matrix(c(1, rho, rho, 1), 2, 2)
@@ -161,7 +176,11 @@ simulate_panel_data <- function(
 # - truncation removes rows (not NA)
 # ------------------------------------------------------
 
-```{r}
+ - `mean_adj` calculates mean of all values >q95 and replaces those extreme values with that mean. This allows us to preserve sample size and is less aggressive than topcoding as it allows variation among extremes.  
+ - `median_adj` same as `mean_adj` but uses median instead. This is more robust to super-extreme values than `mean_adj`  
+ 
+
+```{r treatments}
 treat_extremes_df <- function(dat, method = "raw") {
   if (method == "raw") return(dat)
 
@@ -200,7 +219,7 @@ treat_extremes_df <- function(dat, method = "raw") {
 # 3) Safe Gamma fit wrapper (UPDATED to use zPCS)
 # ------------------------------------------------------
 
-```{r}
+```{r safe_gamma_fn}
 safe_gamma_fit <- function(dat) {
   dat2 <- dat %>% filter(ind_gt0 == 1, is.finite(TOTEXPYY), TOTEXPYY > 0)
   if (nrow(dat2) < 10) return(NULL)
